kubernetes/apps/media/bazarr/ingress.yaml
# Kapitel 21: bazarr im Tailnet unter https://bazarr.<tailnet>.ts.net
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: bazarr
      port:
        number: 6767
  tls:
    - hosts:
        - bazarr
